[package]
name = "guardian-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "guardian_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["spl-token", "associated_token"] }
pyth-sdk-solana = "0.10.1"
blake3 = "=1.5.5"
getrandom = { version = "0.2", features = ["custom"] }
ahash = "=0.8.7"
hashbrown = "=0.14.3"
